--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,11 @@
 [package]
 name = "bevy_contrib_colors"
 version = "0.1.0"
-authors = ["guimcaballero <guim.caballero@gmail.com>"]
+authors = ["guimcaballero <guim@caballerocoll.com>"]
 edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+bevy = { git = "https://github.com/bevyengine/bevy", branch = "master" }
+hex = "0.4"
