--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,4 +10,5 @@ repository = "https://github.com/guimcaballero/bevy_contrib_colors"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-bevy = "0.2.1"
+#bevy = "0.2.1"
+bevy = {git = 'https://github.com/bevyengine/bevy' }
