--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,4 +11,4 @@ repository = "https://github.com/guimcaballero/bevy_contrib_colors"
 
 [dependencies]
 #bevy = "0.2.1"
-bevy = {git = 'https://github.com/bevyengine/bevy' }
+bevy = {git = "https://github.com/bevyengine/bevy", branch = "master" }
